devtools/client/themes/performance.css
/* vim:set ts=2 sw=2 sts=2 et: */
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this file,
 * You can obtain one at http://mozilla.org/MPL/2.0/. */

/* CSS Variables specific to this panel that aren't defined by the themes */
.theme-dark {
  --cell-border-color: rgba(255,255,255,0.15);
  --cell-border-color-light: rgba(255,255,255,0.1);
  --focus-cell-border-color: rgba(255,255,255,0.5);
  --row-alt-background-color: rgba(86, 117, 185, 0.15);
  --row-hover-background-color: rgba(86, 117, 185, 0.25);
}

.theme-light {
  --cell-border-color: rgba(0,0,0,0.15);
  --cell-border-color-light: rgba(0,0,0,0.1);
  --focus-cell-border-color: rgba(0,0,0,0.3);
  --row-alt-background-color: rgba(76,158,217,0.1);
  --row-hover-background-color: rgba(76,158,217,0.2);
}

.theme-firebug {
  --cell-border-color: rgba(0,0,0,0.15);
  --cell-border-color-light: rgba(0,0,0,0.1);
  --focus-cell-border-color: rgba(0,0,0,0.3);
  --row-alt-background-color: rgba(76,158,217,0.1);
  --row-hover-background-color: rgba(76,158,217,0.2);
}

/**
 * A generic class to hide elements, replacing the `element.hidden` attribute
 * that we use to hide elements that can later be active
 */
.hidden {
  display: none;
  width: 0px;
  height: 0px;
}

/* Toolbar */

#performance-toolbar-control-other {
  padding-inline-end: 5px;
}

#performance-toolbar-controls-detail-views .toolbarbutton-text {
  padding-inline-start: 4px;
  padding-inline-end: 8px;
}

#filter-button {
  list-style-image: url(images/filter.svg);
}

#performance-filter-menupopup > menuitem:before {
  content: "";
  display: block;
  width: 8px;
  height: 8px;
  margin: 0 8px;
  border-radius: 1px;
}

/* Details panel buttons */

#select-waterfall-view {
  list-style-image: url(images/performance-icons.svg#details-waterfall);
}

#select-js-calltree-view,
#select-memory-calltree-view {
  list-style-image: url(images/performance-icons.svg#details-call-tree);
}

#select-js-flamegraph-view,
#select-memory-flamegraph-view {
  list-style-image: url(images/performance-icons.svg#details-flamegraph);
}

#select-optimizations-view {
  list-style-image: url(images/profiler-stopwatch.svg);
}

/* Recording buttons */

#main-record-button {
  list-style-image: url(images/profiler-stopwatch.svg);
}

#import-button {
  list-style-image: url(images/import.svg);
}

#main-record-button .button-icon, #import-button .button-icon {
  margin: 0;
}

#main-record-button .button-text, #import-button .button-text {
  display: none;
}

.notice-container .record-button {
  padding: 5px !important;
}

.notice-container .record-button[checked],
.notice-container .record-button[checked] {
  color: var(--theme-selection-color) !important;
  background: var(--theme-selection-background) !important;
}

.record-button[locked] {
  pointer-events: none;
  opacity: 0.5;
}

/* Sidebar & recording items */

#recordings-list {
  border-inline-end: 1px solid var(--theme-splitter-color);
}

.recording-item {
  padding: 4px;
}

.recording-item-title {
  font-size: 110%;
}

.recording-item-footer {
  padding-top: 4px;
  font-size: 90%;
}

.recording-item-save {
  text-decoration: underline;
  cursor: pointer;
}

.recording-item-duration,
.recording-item-save {
  color: var(--theme-body-color-alt);
}

#recordings-list .selected label {
  /* Text inside a selected item should not be custom colored. */
  color: inherit !important;
}

/* Recording notices */

.notice-container {
  font-size: 120%;
  background-color: var(--theme-body-background);
  color: var(--theme-body-color);
  padding-bottom: 20vh;
}

.console-profile-command {
  font-family: monospace;
  margin: 3px 2px;
}

.realtime-disabled-message,
.realtime-disabled-on-e10s-message {
  display: none;
  /* This label does not want to wrap naturally (based on some combination of
     it's parents and flex).  Quick and dirty way to force it to wrap -> don't
     let it get bigger than half the screen size */
  max-width: 60vw;
}

#performance-view[e10s="disabled"] .realtime-disabled-on-e10s-message {
  display: auto;
  opacity: 0.5;

}
#performance-view[e10s="unsupported"] .realtime-disabled-message {
  display: auto;
  opacity: 0.5;
}

.buffer-status-message,
.buffer-status-message-full {
  display: none;
}

#details-pane-container[buffer-status="in-progress"] .buffer-status-message {
  display: auto;
  opacity: 0.5;
}

#details-pane-container[buffer-status="full"] .buffer-status-message {
  display: auto;
  color: var(--theme-highlight-red);
  font-weight: bold;
  opacity: 1;
}

#details-pane-container[buffer-status="full"] .buffer-status-message-full {
  display: auto;
}

/* Profile call tree */

.call-tree-cells-container {
  overflow: auto;
}

.call-tree-cells-container[categories-hidden] .call-tree-category {
  display: none;
}

.call-tree-header {
  font-size: 90%;
  padding-top: 2px !important;
  padding-bottom: 2px !important;
}

.call-tree-header[type="duration"],
.call-tree-cell[type="duration"],
.call-tree-header[type="self-duration"],
.call-tree-cell[type="self-duration"] {
  min-width: 6vw;
  width: 6vw;
}

.call-tree-header[type="percentage"],
.call-tree-cell[type="percentage"],
.call-tree-header[type="self-percentage"],
.call-tree-cell[type="self-percentage"] {
  min-width: 5vw;
  width: 5vw;
}

.call-tree-header[type="samples"],
.call-tree-cell[type="samples"] {
  min-width: 4.5vw;
  width: 4.5vw;
}
/* ... */

